# Terminal-Calculator

./: .gitignore  CMakeLists.txt  README.md  calculator.c  calculator.h  main.c
src/: calculator.c  calculator.h  main.c
